--- a/index.html
+++ b/index.html
@@ -1,34 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <style>
-      /* CSS */
-      html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-        margin: 0;
-        padding: 0;
-        border: 0;
-        font-size: 100%;
-        font: inherit;
-        vertical-align: baseline;
-      }
-      table {
-        border-collapse: collapse;
-        width: 100%;
-        white-space: nowrap;
-      }
-      th, td {
-        border: 0px;
-        text-align: left;
-        padding: 8px;
-      }
-      td:first-child {
-        width: 1%;
-        white-space: nowrap;
-      }
-      tr:nth-child(even) {
-        background-color: #f2f2f2;
-      }
-    </style>
+ <link rel="stylesheet" href="css/index.css">
   </head>
 <body>
     <!--
