ajout du design de login

--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
  <link rel="stylesheet" href="css/index.css">
   </head>
 <body>
+  <div class="frame">
+      <div class="overlap-group-wrapper">
+        <div class="overlap-group">
+          <img class="rectangle" src="img/rectangle-56.png" />
+          <img class="img" src="img/rectangle-55.png" />
+          <img class="se-souvenir-de-moi" src="img/se-souvenir-de-moi.png" />
+          <img class="besoin-daide" src="img/besoin-d-aide.png" />
+          <img class="veuillez-entrer-vos" src="img/veuillez-entrer-vos-identifiants-ecoledirecte.png" />
+          <img class="connectez-vous" src="img/connectez-vous.png" />
+          <img class="login" src="img/login.png" />
+          <img class="group" src="img/group-3.png" />
+          <img class="group-2" src="img/group-2.png" />
+          <img class="ellipse" src="img/ellipse-86.png" />
+          <img class="connection-admin" src="img/connection-admin.png" />
+        </div>
+      </div>
+    </div>
     <!--
     <script type="module" src="./js/app.js"></script>
     -->
