--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
  <link rel="stylesheet" href="css/index.css">
-  </head>
+ <link rel="stylesheet" href="globals.css" />
+</head>
 <body>
   <div class="frame">
       <div class="overlap-group-wrapper">
