--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  <link rel="stylesheet" href="css/index.css">
- <link rel="stylesheet" href="globals.css" />
+ <link rel="stylesheet" href="css/globals.css" />
 </head>
 <body>
   <div class="frame">
