--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+ <meta charset="utf-8" />
  <link rel="stylesheet" href="css/index.css">
  <link rel="stylesheet" href="css/globals.css" />
 </head>
